# Proyecto1-optimizacion-rutas

./: .env  .gitignore  README.md  README.txt  expediciones_camiones.csv  main.py  matriz_tiempos_destinos.csv  pedidos_entregables_hoy.csv  productos_fabricados.csv  pyproject.toml  requirements.txt  resumen_expediciones.csv  rutas_completas.csv  rutas_detalladas.json  server.py
Frontend/: a.py  main.py
app/: constantes.py  database.py
app/Knn/: Clusterizacion_V0.py  Clusterizacion_V1.py
app/algoritmos/: algoritmo.py  fuerza_bruta.py  genetico.py  kmeans.py
app/camiones/: Camiones.py  Flota_camiones.py
app/data/: analisis_comparativo_urgencias.csv  asignacion_pedidos_clusters.csv  clientes.csv  comparacion_knn_datasets.csv  datos_completos_con_urgencias.csv  destinos.csv  knn_dataset2_urgencia_60_40.csv  knn_dataset3_urgencia_40_60.csv  knn_dataset4_todas_urgencias.csv  knn_dataset5_normalizado.csv  knn_dataset5_sin_normalizar.csv  limpieza_csv.py  lineaspedidos.csv  matriz_distancias.csv  pedidos.csv  pedidos_con_destinos copy.csv  pedidos_con_destinos.csv  pedidos_con_destinos_old.csv  pedidos_con_destinos_old_1.csv  pedidos_con_destinos_prubea.csv  pedidos_old.csv  pedidos_restantes_ia.csv  productos.csv  provincias.csv  provincias_old.csv  reporte_rutas_por_cluster.csv  transform_nodos_data.py
app/model1_routing/: README_tx.md  constantes.py  generar_matriz_distancias_tiempos.py  main_model1.py  mapear.py
app/model2_optimizer/: 2.txt
app/model_optimizer/: main_model2.py  productos_fabricados_optimizer.py  rutas_optimas.py
(+11 files in other folders)
