[project]
name = "proyecto1-optimizacion-rutas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deap>=1.4.3",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "pyodbc>=5.3.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
